Add navigation to toolbar

--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Help" />
+        android:padding="20dp"
+        android:text="Help Screen" />
 
 </LinearLayout>
