--- a/app/src/main/res/layout/fragment_sent_items.xml
+++ b/app/src/main/res/layout/fragment_sent_items.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InboxFragment">
+    tools:context=".SentItemsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
-        android:text="Inbox Screen" />
+        android:text="Sent Items" />
 
 </LinearLayout>
