Add bottom navigation bar

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,4 +14,9 @@
         android:name="com.trungdunghoang125.catchat.HelpFragment"
         android:label="Help"
         tools:layout="@layout/fragment_help" />
+    <fragment
+        android:id="@+id/sentItemsFragment"
+        android:name="com.trungdunghoang125.catchat.SentItemsFragment"
+        android:label="Sent Items"
+        tools:layout="@layout/fragment_sent_items" />
 </navigation>
