Add navigation drawer

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+<group android:checkableBehavior="single">
     <item
         android:id="@+id/inboxFragment"
         android:title="Inbox"
@@ -10,8 +10,15 @@
         android:id="@+id/sentItemsFragment"
         android:title="Sent Items"
         android:icon="@android:drawable/ic_menu_send" />
-    <item
-        android:id="@+id/helpFragment"
-        android:title="Help"
-        android:icon="@android:drawable/ic_menu_help" />
+</group>
+
+    <item android:title="Support">
+        <menu>
+            <item
+                android:id="@+id/helpFragment"
+                android:title="Help"
+                android:icon="@android:drawable/ic_menu_help"
+                />
+        </menu>
+    </item>
 </menu>
